# openf1

./: .gitignore  CNAME  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  app.py  auth.html  contact.html  database-sessions.json  docker-compose.yml  docker-entrypoint  flake.nix  index.html  pyproject.toml  real_time.html  requirements.txt  shell.nix  testing_requirements.txt
.github/: FUNDING.yml
.github/workflows/: deploy_e2e_test.yaml  documentation.yml  ingestor.yml  queryapi_documentation.yml  tests.yml  website.yml
docs/: index.html
docs/javascripts/: all_nosearch-dc420cbe.js
docs/pages/: auth.html
docs/stylesheets/: screen-94bdd4f6.css
documentation/: README.md  attributes_descriptions.py  generate.py  index.html.md
documentation/bruno-collection/: bruno.json  car_data.bru  drivers.bru  intervals.bru  laps.bru  location.bru  meetings.bru  pit.bru  position.bru  race_control.bru  sessions.bru  stints.bru  team_radio.bru  weather.bru
documentation/bruno-collection/environments/: prd.bru
documentation/includes/: _acknowledgments.md  _api_endpoints.md  _api_methods.md  _community_and_support.md  _contributing.md  _faq.md  _introduction.md  _roadmap.md  _tutorials.md
documentation/layouts/: layout.erb
documentation/pages/: auth.html  mqtt.html  real_time.html
documentation/source/: index.html.md
documentation/stylesheets/: _normalize.scss  screen.css.scss
examples/: replay_historical_to_mqtt.py
f1-analytics/: .gitignore  next.config.ts  package-lock.json  package.json  tailwind.config.ts
ingestor/: Dockerfile  README.md  app.py  db.py  infra.tf  ingest_history.py  ingest_real_time.py  logger.py  parsing.py  requirements.txt  util.py
javascripts/: all-f36e5d3b.js
mongodb/: mongo.conf  start.sh
mqtt-config/: mosquitto.conf  mosquitto.passwd
pages/: auth.html  real_time.html
query_api/: Dockerfile  README.md  base_method.py  db.py  filters.py  infra.tf  main.py  requirements.txt  util.py
query_api/scripts/: measure_delay.py
query_api/tests/: integration.py
stylesheets/: screen-3adc62ae.css  screen-d9036481.css
tests/: README.md  conftest.py  test_whisper_service.py
tests/data/: test.py
tests/fixtures/: config_mongodb.py
(+136 files in other folders)
